Design UI Main Fragment Success

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">O Service</string>
+    <string name="app_name">M Coffee</string>
+    <string name="user">User :</string>
+    <string name="password">Password :</string>
 </resources>
